syntax = "proto3";

package Messenger.Protocols;

enum Status {
  Success = 0;
  Failure = 1;
}

message WriteRequest
{
  bytes Data = 1;
}

message WriteResponse
{
  Status Result = 1;
}

message ReadRequest
{
  sint32 Length = 1;
}

message ReadResponse
{
  bytes Data = 1;
}

service Router {
  rpc Write (WriteRequest) returns (WriteResponse);
  rpc Read (ReadRequest) returns (ReadResponse);
}
